# embodied-world-model

./: .env.example  .gitignore  output.txt  pyproject.toml  requirements.txt  setup.py
mineland/alex/: alex_agent.py
mineland/alex/action/: action_agent.py
mineland/alex/brain/: associative_memory.py  long_term_planner.py  memory_library.py  skill_manager.py  viewer.py
mineland/alex/critic/: critic_agent.py
mineland/alex/prompt_template/: __init__.py
mineland/alex/prompt_template/ToA/leader/: high_level_action_template_qwen.txt
mineland/alex/self_check/: self_check_agent.py
mineland/central_planner/: __init__.py  central_planning.py  critic_agent.py  long_term_planner.py
mineland/central_planner/prompt_template/: __init__.py
mineland/sim/: server_manager.py  sim.py
mineland/sim/data/: action.py
mineland/sim/server/: server.properties
scripts/: alex_example.py  connect_to_any_server.py  multiagent_framework.py
