[tool.poetry]
name = "mineland"
version = "0.1.0"
description = ""
authors = ["kk-macbook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "0.25.1"
chromadb = "0.4.22"
gymnasium = "0.29.1"
httptools = "0.6.1"
langchain = "0.1.1"
langchain-openai = "0.0.2.post1"
omegaconf = "2.3.0"
opencv-python = "4.8.1.78"
pillow = "10.3.0"
pip-chill = "1.0.3"
python-dotenv = "1.0.0"
watchfiles = "0.21.0"
websockets = "12.0"
matplotlib = "3.8.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
