[tool.poetry]
name = "mineland"
version = "0.1.0"
description = ""
authors = ["kk-macbook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "0.25.1"
chromadb = "0.4.22"
gymnasium = "0.29.1"
httptools = "0.6.1"
langchain = "0.1.1"
langchain-openai = "0.0.2.post1"
omegaconf = "2.3.0"
opencv-python = "4.8.1.78"
pillow = "10.3.0"
pip-chill = "1.0.3"
python-dotenv = "1.0.0"
watchfiles = "0.21.0"
websockets = "12.0"
matplotlib = "3.8.2"
ipykernel = "^6.29.5"
transformers = "^4.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false


[tool.ruff]
extend-include = ["*.ipynb"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

line-length = 120
indent-width = 4


[tool.ruff.lint]
# PEP8のどのルールを対象に警告を出すか
select = [
    "C",
    "E",
    "F",
    "W",
]
ignore = [
]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"